kubeflow-deployments/gcp-private-0527/.build/kubeflow-apps/networking.istio.io_v1alpha3_virtualservice_centraldashboard.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    image-prefix.kubeflow.org: '{"quay.io/jetstack": "gcr.io/gcp-private-dev/quay.io/jetstack",
      "metacontroller": "gcr.io/gcp-private-dev/metacontroller"}'
  labels:
    app.kubernetes.io/component: centraldashboard
    app.kubernetes.io/name: centraldashboard
  name: centraldashboard
  namespace: kubeflow
spec:
  gateways:
  - kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /
    rewrite:
      uri: /
    route:
    - destination:
        host: centraldashboard.kubeflow.svc.cluster.local
        port:
          number: 80
